# pic-usb-communication

device/: .ccls  CMakeLists.txt  device.c  device.h  ide_helper.h  led.c  led.h  main.c
device/scripts/: f1937.mdb
host/: Cargo.toml  data_out
host/src/: dev.rs  main.rs  util.rs
